--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@uiw/codemirror-theme-vscode": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
+    "assert": "^2.1.0",
     "firebase": "^10.6.0",
     "next": "14.0.2",
     "react": "^18",
