--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.6.0",
     "next": "14.0.2",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.11.0",
